--- a/styles.css
+++ b/styles.css
@@ -234,7 +234,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 24px;
-  margin-bottom: 2vh;
+  padding-bottom: 3rem;
   margin-left: 24px;
   margin-right: 24px;
 }
