--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,8 @@
   
   .hero-content{
     position: relative;
-     z-index: 1;
+    z-index: 1;
+    margin: auto;
   }
 
   /* The lace-framed PNG */
